# Autonomous-Motorsports-Motion-Planning-for-the-IAC

./: .gitignore  .gitignore.swp  README.md
EPSILON/src/: README.md
EPSILON/src/app/planning_integrated/: CMakeLists.txt  package.xml
EPSILON/src/app/planning_integrated/launch/: test_ssc_with_eudm_ros.launch  test_ssc_with_eudm_ros_launch.py  test_ssc_with_mpdm_ros_launch.py
EPSILON/src/app/planning_integrated/src/: test_ssc_with_eudm.cc  test_ssc_with_mpdm.cc
EPSILON/src/aux_tools/: CMakeLists.txt  package.xml
EPSILON/src/aux_tools/src/: terminal_server.py
EPSILON/src/core/behavior_planner/: CMakeLists.txt  package.xml
EPSILON/src/core/behavior_planner/inc/behavior_planner/: behavior_server_ros.h  map_adapter.h
EPSILON/src/core/behavior_planner/include/behavior_planner/: behavior_planner.h  behavior_server_ros.h  visualizer.h
EPSILON/src/core/behavior_planner/src/behavior_planner/: behavior_planner.cc  behavior_server_ros.cc
EPSILON/src/core/common/: CMakeLists.txt  package.xml
EPSILON/src/core/common/include/common/visualization/: common_visualization_util.h
EPSILON/src/core/forward_simulator/: CMakeLists.txt  package.xml
EPSILON/src/core/motion_predictor/: CMakeLists.txt  package.xml
EPSILON/src/core/phy_simulator/: CMakeLists.txt  package.xml
EPSILON/src/core/phy_simulator/inc/phy_simulator/: ros_adapter.h  visualizer.h
EPSILON/src/core/phy_simulator/include/phy_simulator/: ros_adapter.h  visualizer.h
EPSILON/src/core/phy_simulator/launch/: joy_ctrl_launch.py  phy_simulator_planning.launch  phy_simulator_planning_launch.py
EPSILON/src/core/phy_simulator/rviz/: phy_simulator_planning.rviz
EPSILON/src/core/phy_simulator/src/: phy_simulator_planning_node.cc
EPSILON/src/core/phy_simulator/src/phy_simulator/: ros_adapter.cc  visualizer.cc
EPSILON/src/core/playgrounds/: CMakeLists.txt
EPSILON/src/core/route_planner/: CMakeLists.txt  package.xml
EPSILON/src/core/semantic_map_manager/: CMakeLists.txt  package.xml
EPSILON/src/core/semantic_map_manager/inc/semantic_map_manager/: ros_adapter.h
EPSILON/src/core/semantic_map_manager/include/semantic_map_manager/: ros_adapter.h  visualizer.h
EPSILON/src/core/semantic_map_manager/src/: ros_adapter.cc  semantic_map_manager.cc  visualizer.cc
EPSILON/src/core/vehicle_model/: CMakeLists.txt  package.xml
EPSILON/src/core/vehicle_model/include/vehicle_model/: ideal_steer_model.h
EPSILON/src/core/vehicle_model/src/vehicle_model/: idm_model.cc
EPSILON/src/core/vehicle_msgs/: CMakeLists.txt
EPSILON/src/core/vehicle_msgs/msg/: ArenaInfoStatic.msg  ControlSignal.msg  ObstacleSet.msg  OccupancyGridUInt8.msg  Vehicle.msg  VehicleSet.msg
EPSILON/src/util/ai_agent_planner/: CMakeLists.txt  package.xml
EPSILON/src/util/ai_agent_planner/launch/: onlane_ai_agent_launch.py  onlane_ego_agent_launch.py
EPSILON/src/util/ai_agent_planner/src/: onlane_ai_agent.cc
EPSILON/src/util/eudm_planner/: CMakeLists.txt  package.xml
EPSILON/src/util/ssc_planner/: CMakeLists.txt  package.xml
EPSILON/src/util/ssc_planner/rviz/: ssc_config.rviz
ad_pomdp/src/app/planning_integrated/: CMakeLists.txt
ad_pomdp/src/app/planning_integrated/launch/: test_ssc_with_eudm_ros_launch.py  test_ssc_with_mpdm_ros_launch.py
ad_pomdp/src/aux_tools/: package.xml
ad_pomdp/src/aux_tools/src/: terminal_server.py
ad_pomdp/src/core/common/: CMakeLists.txt
ad_pomdp/src/core/forward_simulator/: CMakeLists.txt
ad_pomdp/src/core/phy_simulator/launch/: phy_simulator_planning_launch.py
ad_pomdp/src/core/phy_simulator/src/: phy_simulator_planning_node.cc
ad_pomdp/src/core/playgrounds/: package.xml
ad_pomdp/src/core/semantic_map_manager/: CMakeLists.txt
ad_pomdp/src/core/vehicle_model/: package.xml
ad_pomdp/src/core/vehicle_msgs/: package.xml
ad_pomdp/src/core/vehicle_msgs/msg/: ArenaInfo.msg  CircleObstacle.msg  FreeState.msg  Lane.msg  PolygonObstacle.msg
ad_pomdp/src/util/ai_agent_planner/: CMakeLists.txt
ad_pomdp/src/util/ai_agent_planner/launch/: onlane_ego_agent_launch.py
ad_pomdp/src/util/eudm_planner/: CMakeLists.txt
app/planning_integrated/: CMakeLists.txt
app/planning_integrated/launch/: test_ssc_with_mpdm_ros_launch.py
app/planning_integrated/src/: test_ssc_with_eudm.cc
aux_tools/: CMakeLists.txt
core/behavior_planner/: CMakeLists.txt  package.xml
core/behavior_planner/include/behavior_planner/: behavior_server_ros.h  map_interface.h  visualizer.h
core/behavior_planner/src/behavior_planner/: behavior_server_ros.cc  map_adapter.cc
core/common/: package.xml
core/common/cmake/: FindOOQP.cmake
core/common/include/common/visualization/: common_visualization_util.h
core/common/src/common/solver/: ooqp_interface.cc
core/motion_predictor/: CMakeLists.txt
core/phy_simulator/: CMakeLists.txt  package.xml
core/phy_simulator/include/phy_simulator/: visualizer.h
core/phy_simulator/launch/: phy_simulator_planning_launch.py
core/phy_simulator/rviz/: phy_simulator_planning.rviz
core/phy_simulator/src/: phy_simulator_planning_node.cc
core/playgrounds/: CMakeLists.txt
core/semantic_map_manager/: package.xml
core/semantic_map_manager/include/semantic_map_manager/: ros_adapter.h  visualizer.h
core/semantic_map_manager/src/: data_renderer.cc  visualizer.cc
core/vehicle_model/: CMakeLists.txt
core/vehicle_model/include/vehicle_model/: ctx_idm_model.h  idm_model.h  vehicle_model.h
core/vehicle_model/src/vehicle_model/: ctx_idm_model.cc  ideal_steer_model.cc
core/vehicle_msgs/: package.xml
core/vehicle_msgs/include/vehicle_msgs/: decoder.h
core/vehicle_msgs/msg/: ArenaInfoDynamic.msg  ArenaInfoStatic.msg  LaneNet.msg  MotionControl.msg  OccupancyGridFloat.msg  State.msg
util/ai_agent_planner/launch/: onlane_ai_agent_launch.py
util/ai_agent_planner/src/: onlane_ai_agent.cc
util/eudm_planner/: package.xml
util/eudm_planner/include/eudm_planner/: eudm_server_ros.h
util/ssc_planner/: package.xml
util/ssc_planner/include/ssc_planner/: ssc_server_ros.h  ssc_visualizer.h
util/ssc_planner/src/ssc_planner/: ssc_server_ros.cc  ssc_visualizer.cc
(+18 files in other folders)
