<?xml version="1.0"?>
<package format="3">
  <name>phy_simulator</name>
  <version>0.0.0</version>
  <description>phy_simulator</description>
  <maintainer email="wdingae@todo.com">HKUST_UAV_GROUP</maintainer>
  <license>TODO</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Package dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend> <!-- Replacing rospy for ROS 2 -->
  <depend>vehicle_msgs</depend>
  <depend>common</depend>
  <depend>vehicle_model</depend>
  <exec_depend>ros2launch</exec_depend>

  <!-- Export dependencies -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
