<?xml version="1.0"?>
<package format="3">
  <name>vehicle_msgs</name>
  <version>0.0.1</version>
  <description>Vehicle messages for ROS 2</description>
  <maintainer email="uav.ust.hk@todo.com">HKUST_UAV_GROUP</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>common</depend>
  <!-- 编译依赖 -->
  <build_depend>rosidl_default_generators</build_depend>
  <!-- 执行依赖 -->
  <depend>rosidl_default_runtime</depend>
  <!-- 声明当前所属的功能包组 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
