<?xml version="1.0"?>
<package format="3">
  <name>aux_tools</name>
  <version>1.0.0</version>
  <description>aux_tools</description>
  <maintainer email="test@gmail.com">test</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rosconsole</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>vehicle_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
