<?xml version="1.0"?>
<package format="3">
  <name>behavior_planner</name>
  <version>0.0.0</version>
  <description>behavior_planner</description>
  <maintainer email="wdingae@todo.com">HKUST_UAV_GROUP</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>common</depend>
  <depend>semantic_map_manager</depend>
  <depend>route_planner</depend>
  <depend>vehicle_model</depend>
  <depend>forward_simulator</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
