<?xml version="1.0"?>
<package format="3">
  <name>forward_simulator</name>
  <version>0.0.0</version>
  <description>forward_simulator</description>
  <maintainer email="wdingae@todo.com">HKUST_UAV_GROUP</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rospy</depend>
  <depend>common</depend>
  <depend>vehicle_model</depend>

  <!-- Export dependencies -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
