<?xml version="1.0"?>
<package format="3">
  <name>motion_predictor</name>
  <version>0.0.0</version>
  <description>motion_predictor</description>
  <maintainer email="wdingae@todo.com">HKUST_UAV_GROUP</maintainer>
  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>common</depend>
  <depend>forward_simulator</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
