<?xml version="1.0"?>
<package format="3">
  <name>phy_simulator</name>
  <version>0.0.0</version>
  <description>phy_simulator</description>
  <maintainer email="wdingae@todo.com">HKUST_UAV_GROUP</maintainer>
  <license>TODO</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Package dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend> <!-- Replacing rospy for ROS 2 -->
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>Eigen3</depend>
  <depend>common</depend>
  <depend>vehicle_model</depend>
  <depend>vehicle_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Export dependencies -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
